app/assets/stylesheets/_global.scss
// =============================================================================
// GLOBAL
// =============================================================================
h1, h2, h3, h4, h5 {
  font-family: $sanstitle;
}

h1 {
  font-size: 220%;
  font-weight: 300;
  color: $gray3;

  a {
    color: $gray4;
  }
}
h2 {
  font-size: 180%;
  font-weight: 300;
}
h4 {
  font-size: 90%;
  font-weight: 300;
  text-transform: uppercase;
}
a {
  color: $blue;
}
.block {
  display: block;
}
.centered {
  text-align: center;
}

.pull-right {
  float: right;
}

.pull-left {
  float: left;
}
.text-right {
  text-align: right;
}
.text-left {
  text-align: left;
}
.align-top {
  @include align-self(flex-start);
}
.align-bottom {
  @include align-self(flex-end);
}
.playground-error {
  color: $red;
  min-height: 30px;
}

.wrap-text {
  word-wrap: break-word;
}

.underline {
  border-bottom: 1px solid $gray2;
  span {
    border-bottom: 1px solid $white;
    padding-right: 4px;
  }
}

.side-link {
  float: left;
  margin-left: -43px;

  &.btn-add {
    margin-top: 30px;
    margin-left: -73px;
  }
}

a[title="Back"] {
  margin-left: -42px;
}

.button-actions {
  margin-top: 30px;
}

.box {
  background: $white;
  padding: 25px;

  &.small {
    padding: 10px;
  }

  &.big {
    padding: 65px;
  }
}


.institution-container {

  + .institution-name {
    display: none;
  }

  &.active {
    input[type="radio"] + .institution-option {
      opacity: 0.3;
    }
    input[type="radio"]:checked + .institution-option {
      opacity: 1;
    }
    + .institution-name {
      display: block;
      margin-bottom: 400px;
    }
  }

  .institution-radio {
    display: inline-block;

    label {
      margin: 0 !important;

      .btn-add {
        cursor: pointer;
      }

      &:before,
      &:after {
        display: none;
      }
    }
  }
  h4 {
    font-weight: 700;
  }
}

.institution-name {
  margin-top: 60px;
}

